--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(90deg, #ff0000, #fff);
+  background: linear-gradient(90deg, #0084ff, #fff);
   font-family: "Press Start 2P", cursive;
 }
 .all {
@@ -83,8 +83,8 @@ body {
   border-radius: 2rem;
   font-family: "Press Start 2P", cursive;
   border: solid 2px;
-  border: 2px solid rgb(255, 218, 5);
-  background-color: rgb(0, 132, 255);
+  border: 2px solid #ffda05;
+  background-color: #0084ff;
   color: rgb(255, 218, 5);
   font-size: 12pt;
 }
@@ -99,6 +99,28 @@ body {
 .btns {
   margin-top: 1rem;
   display: flex;
+}
+
+.btns button {
+  border: none;
+  background-color: #ffda05;
+  width: 80px;
+  height: 30px;
+}
+
+.btns button:hover {
+  background-color: #0084ff;
+  color: #ffda05;
+  transition: 0.5s;
+}
+
+.btns i {
+  color: #0084ff;
+  font-size: 16pt;
+}
+
+.btns i:hover {
+  color: #ffda05;
 }
 
 .return {
