--- a/src/global.css
+++ b/src/global.css
@@ -1,128 +1,122 @@
-body {
-  background: linear-gradient(90deg, #0084ff, #fff);
-  font-family: "Press Start 2P", cursive;
-}
-.all {
-  display: flex;
-}
+@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap");
 
-.pokedex img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5rem;
-  position: absolute;
-  z-index: -1;
-  width: 95vh;
-  top: 2rem;
-  left: 2rem;
-}
-
-.screen {
-  transform: rotate(358.4deg);
-  position: relative;
-  background-color: aqua;
-  border-radius: 8px;
-  top: 385px;
-  left: 132px;
-  width: 240px;
-  height: 167px;
-}
-
-.screen img {
-  top: 15px;
+* {
   margin: 0;
-  width: 60%;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  font-family: "Bruno Ace SC", cursive;
+}
+::selection {
+  color: #fff;
+  background-color: #ff0000;
 }
 
-.background img {
-  border-radius: 8px;
+body {
   width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  height: 100vh;
+}
+body::-webkit-scrollbar {
+  width: 12px; /* width of the entire scrollbar */
 }
 
-.screen-info {
-  color: greenyellow;
-  transform: rotate(358deg);
-  left: 580px;
-  top: 352px;
-  position: absolute;
-  width: 310px;
-  height: 90px;
+body::-webkit-scrollbar-track {
+  background: #cdcdcd; /* color of the tracking area */
 }
 
-.moreinfos {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 15rem;
-  margin-left: 60rem;
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(255, 0, 0); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid rgb(0, 0, 0); /* creates padding around scroll thumb */
 }
-
-.moreinfos img {
-  width: 500px;
-}
-
-.infos {
-  color: #960000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.buttonSM button {
-  cursor: pointer;
-  margin-top: 4rem;
-  width: 300px;
+header {
+  background-color: #ff0000;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
   height: 60px;
-  border: none;
-  border-radius: 2rem;
-  font-family: "Press Start 2P", cursive;
-  border: solid 2px;
-  border: 2px solid #ffda05;
-  background-color: #0084ff;
-  color: rgb(255, 218, 5);
-  font-size: 12pt;
+  border-bottom: 13px solid #000;
 }
 
-.buttonSM button:hover {
-  border: solid 2px rgb(0, 132, 255);
-  transition: 0.5s;
-  background-color: rgb(255, 218, 5);
-  color: rgb(0, 132, 255);
+footer {
+  position: relative;
+  height: 60px;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  background-color: #cdcdcd;
+  color: #fff;
+  padding: 20px;
+  border-top: 13px solid #000;
 }
 
-.btns {
-  margin-top: 1rem;
+.logo img {
+  width: 200px;
+}
+
+.title h1 {
+  margin-top: 3rem;
+  margin-left: 3rem;
+}
+
+.card {
+  cursor: pointer;
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 9px;
+  width: 250px;
+  height: 300px;
+  border: 2px solid #000;
 }
 
-.btns button {
-  border: none;
-  background-color: #ffda05;
+.cards-field {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 3rem;
+}
+
+.button-ftr {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  left: 50%;
+  bottom: 100%;
+  transform: translate(-50%, 50%);
+  background: #fff;
+  height: 80px;
   width: 80px;
-  height: 30px;
+  border-radius: 50%;
+  border: 12px solid #000;
 }
 
-.btns button:hover {
-  background-color: #0084ff;
-  color: #ffda05;
-  transition: 0.5s;
+i {
+  color: #000;
 }
 
-.btns i {
-  color: #0084ff;
-  font-size: 16pt;
+.image img {
+  width: 190px;
 }
 
-.btns i:hover {
-  color: #ffda05;
+.image img:hover {
+  transition: 0.7s;
+  width: 200px;
 }
 
-.return {
-  margin-left: 10px;
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+.interior {
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
