--- a/src/global.css
+++ b/src/global.css
@@ -55,10 +55,22 @@ footer {
 .logo img {
   width: 200px;
 }
+.title {
+  padding: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
 
-.title h1 {
-  margin-top: 3rem;
-  margin-left: 3rem;
+.title span {
+  cursor: pointer;
+  margin-left: 10px;
+  border-radius: 6px;
+  padding: 3px;
+  background-color: #ff0000;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #eef;
 }
 
 .card {
@@ -69,8 +81,8 @@ footer {
   padding: 10px;
   margin: 10px;
   border-radius: 9px;
-  width: 250px;
-  height: 300px;
+  min-width: 250px;
+  min-height: 300px;
   border: 2px solid #000;
 }
 
@@ -119,4 +131,83 @@ a {
   justify-content: center;
   align-items: center;
   display: flex;
+}
+
+.all {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 3rem;
+}
+
+.container {
+  display: flex;
+}
+
+.pokemon {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #000;
+  border-radius: 1rem;
+}
+
+.pokemon img {
+  width: 500px;
+}
+
+.fisic {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #000;
+  border-radius: 1rem;
+}
+
+.ability {
+  margin-top: 1rem;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #000;
+  border-radius: 1rem;
+}
+
+.type {
+  margin-top: 1rem;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #000;
+  border-radius: 1rem;
+}
+
+.stats {
+  margin-top: 1rem;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #000;
+  border-radius: 1rem;
+}
+
+.right {
+  padding: 3rem;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
