--- a/src/global.css
+++ b/src/global.css
@@ -134,22 +134,19 @@ a {
 }
 
 .all {
-  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   display: flex;
-  padding: 3rem;
+  margin-left: 10px;
 }
 
 .container {
   display: flex;
+  justify-content: center;
 }
 
 .pokemon {
   padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   border: 3px solid #000;
   border-radius: 1rem;
 }
@@ -158,56 +155,143 @@ a {
   width: 500px;
 }
 
-.fisic {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 3px solid #000;
-  border-radius: 1rem;
-}
-
-.ability {
-  margin-top: 1rem;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 3px solid #000;
-  border-radius: 1rem;
-}
-
-.type {
-  margin-top: 1rem;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 3px solid #000;
-  border-radius: 1rem;
-}
-
-.stats {
-  margin-top: 1rem;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 3px solid #000;
-  border-radius: 1rem;
-}
-
-.right {
-  padding: 3rem;
-}
-
 ul {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.fisic {
+  padding: 10px;
+  border-radius: 1rem;
+  margin-left: 1rem;
+  width: 270px;
+  height: 270px;
+  border: 3px solid #000;
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.stats {
+  border-radius: 1rem;
+  width: 270px;
+  height: 270px;
+  margin-left: 1rem;
+  padding: 10px;
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  border: 3px solid #000;
+  flex-direction: column;
+}
+
+.ability {
+  border-radius: 1rem;
+  width: 270px;
+  height: 270px;
+  margin-left: 1rem;
+  padding: 10px;
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  border: 3px solid #000;
+  flex-direction: column;
+}
+
+.type {
+  border-radius: 1rem;
+  width: 270px;
+  height: 270px;
+  margin-left: 1rem;
+  padding: 10px;
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  border: 3px solid #000;
+  flex-direction: column;
+}
+
+.right {
+  flex-wrap: wrap;
+  display: flex;
+}
+
+span {
+  margin-top: 1rem;
+}
+
+@media (max-width: 1190px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokemon {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 400px;
+    padding: 10px;
+    border: 3px solid #000;
+    border-radius: 1rem;
+  }
+
+  .pokemon img {
+    width: 400px;
+  }
+
+  .all {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  @media (max-width: 480px) {
+    .title {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .title h1 {
+      margin-bottom: 20px;
+    }
+
+    .pokemon {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      width: 300px;
+      padding: 10px;
+      border: 3px solid #000;
+      border-radius: 1rem;
+    }
+
+    .pokemon img {
+      width: 300px;
+    }
+  }
 }
