cabei pt2 kkkkkkkkkkk

--- a/src/global.css
+++ b/src/global.css
@@ -44,7 +44,6 @@ footer {
   position: relative;
   height: 60px;
   bottom: 0;
-
   width: 100%;
   text-align: center;
   background-color: #cdcdcd;
@@ -85,6 +84,13 @@ footer {
   width: 300px;
   height: 350px;
   border: 2px solid #000;
+}
+
+.card h1 {
+  max-width: 10ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .cards-field {
@@ -185,7 +191,7 @@ ul {
 
 .stats {
   color: #fff;
-  background: linear-gradient(50deg, #cdcdcd, #7a7979);
+  background: linear-gradient(50deg, #3f3e3e, #cdcdcd);
   border-radius: 1rem;
   width: 270px;
   height: 270px;
@@ -323,12 +329,6 @@ span {
   }
 
   @media (max-width: 480px) {
-    .container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
     .img-pk img {
       width: 300px;
     }
@@ -362,4 +362,8 @@ span {
       width: 300px;
     }
   }
+}
+
+.alinhar {
+  display: flex;
 }
