--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,7 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
 }
 body::-webkit-scrollbar {
   width: 12px; /* width of the entire scrollbar */
@@ -44,6 +44,9 @@ footer {
   position: relative;
   height: 60px;
   bottom: 0;
+  position: fixed;
+  width: 90%;
+  text-align: center;
   width: 100%;
   text-align: center;
   background-color: #cdcdcd;
@@ -366,4 +369,26 @@ span {
 
 .alinhar {
   display: flex;
+}
+
+.nextprev {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.act button {
+  background: linear-gradient(50deg, #cdcdcd, #7a7979);
+  border-radius: 9px;
+  padding: 10px;
+  font-size: 10pt;
+  height: 40px;
+  margin-bottom: 10px;
+  margin-left: 1rem;
+}
+
+.act {
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
